--- a/resources/views/page.twig
+++ b/resources/views/page.twig
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="csrf-token" content="{{ csrf_token() }}">
 
         <title>Laravel-Admin</title>
 
@@ -50,5 +51,6 @@
     <script src="{{ asset('/template/nprogress/nprogress.js') }}"></script>
     <!-- Custom Theme Scripts -->
     <script src="{{ asset('/template/build/js/custom.min.js') }}"></script>
+    <script src="{{ asset('/js/globals.js') }}"></script>
 </body>
 </html>
