--- a/resources/views/navigation.twig
+++ b/resources/views/navigation.twig
@@ -1,19 +1,21 @@
 <div class="col-md-3 left_col">
     <div class="left_col scroll-view">
         <div class="navbar nav_title" style="border: 0;">
-            <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentesssslella Alela!</span></a>
+            <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>{{ config('app.name') }}</span></a>
         </div>
 
         <div class="clearfix"></div>
 
         <!-- menu profile quick info -->
-        <div class="profile clearfix">
-            <div class="profile_pic">
-                <img src="images/img.jpg" alt="..." class="img-circle profile_img">
-            </div>
+        <div class="profile clearfix {% if not configs.profile_image %}imageless{% endif %}">
+            {% if configs.profile_image %}
+                <div class="profile_pic">
+                    <img src="{{ user.profile.image|default('images/default_user.png') }}" class="img-circle profile_img">
+                </div>
+            {% endif %}
             <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <span>{{ trans('menu.welcome') }},</span>
+                <h2>{{ user.name }}</h2>
             </div>
         </div>
         <!-- /menu profile quick info -->
@@ -135,7 +137,7 @@
             <a data-toggle="tooltip" data-placement="top" title="Lock">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
             </a>
-            <a data-toggle="tooltip" data-placement="top" title="Logout" href="login.html">
+            <a data-toggle="tooltip" data-placement="top" title="{{ trans('auth.logout') }}" href="javascript:logout()">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
             </a>
         </div>
