--- a/resources/views/top-navigation.twig
+++ b/resources/views/top-navigation.twig
@@ -8,7 +8,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="">
                     <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        <img src="images/img.jpg" alt="">John Doe
+                        {% if configs.profile_image %}<img src="{{ user.profile.imagem|default('images/default_user.png') }}" alt="">{% endif %}{{ user.name }}
                         <span class=" fa fa-angle-down"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-usermenu pull-right">
