--- a/resources/views/page.twig
+++ b/resources/views/page.twig
@@ -52,6 +52,8 @@
         <script src="{{ asset('/template/bootstrap/js/bootstrap.min.js') }}"></script>
         <!-- NProgress -->
         <script src="{{ asset('/template/nprogress/nprogress.js') }}"></script>
+        <!-- BootBox -->
+        <script src="{{ asset('/template/bootbox/bootbox.min.js') }}"></script>
         <!-- Custom Theme Scripts -->
         <script src="{{ asset('/template/build/js/custom.js') }}"></script>
         <script src="{{ asset('/js/globals.js') }}"></script>
